# brazilian-economic-dashboard

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: basic_check.yaml
dbt_economic_pipeline/: dbt_project.yml
src/economic_pipeline/: main.py
src/economic_pipeline/app/: main.py
src/economic_pipeline/extractors/: main.py
src/economic_pipeline/loaders/: main.py
src/economic_pipeline/utils/: config.py  database.py
tests/: conftest.py  test_main.py
